# iq-doc

./: .gitignore  Makefile  README.md  pyproject.toml
api/: Inspiration-Q_Index_Tracking_API.postman_collection.json  iq-index-tracking.yaml
doc/: 1-index-tracking-test.md  1-index-tracking.md  2-accessing-the-api.md  3-index-tracking-sdk.md  4-tools-complete-example.md  prerequisites.md
examples/: index_tracking_from_asset_prices_with_covariance.py  index_tracking_from_asset_prices_with_covariance_rebalance_sectors.py  index_tracking_no_sdk.py  index_tracking_random_data_sdk.py  index_tracking_sdk.py
examples/data/: asset_prices.csv  previous_portfolio.csv  sector_distribution.csv  sector_weights.csv  small-input-data.json
src/iq/api/: iqrestapi.py  validate.py
src/iq/finance/: __init__.py  index_tracking.py
src/iq/tools/: __init__.py  quadratic_utility.py
